header z-index fix

--- a/styles.scss
+++ b/styles.scss
@@ -43,6 +43,7 @@ $primaryTxtColorLighter: #43ABF0;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
 
   &__logo {
   }
